2010-03-03  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (realloc_threads_symvalues): expand all threads symvalues
	tables and initialize new cells to SYMVALUE_EMPTY
	* spvw_global.d (add_per_thread_special_var): use it
	* spvw_memfile.d (loadmem_from_handle): ditto

2010-03-02  Sam Steingold  <sds@gnu.org>

	* pathname.d (CD): do not merge *DEFAULT-PATHNAME-DEFAULTS*
	because the merging breaks the advertised behavior: (CD) is
	actually equivalent to (CD *DEFAULT-PATHNAME-DEFAULTS*),
	and does not just return the current directory as advertised

2010-02-28  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xlock_unlock_helper): signal lock's condition variable
	before unlocking internal mutex. fixes possible deadlock if signal is
	missed

2010-02-27  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (gar_col_normal) [MULTITHREAD]: mark active threads
	before weak pointers
	(SPLIT_REF_LISTS): remove 'condition' argument

2010-02-27  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xlock_lock_helper): do not try to handle pending
	interrupts for signal processing thread (no clisp_thread_t for it)
	(win32_xcondition_wait): cleanup

2010-02-26  Sam Steingold  <sds@gnu.org>

	* configure.in: call gl_FCNTL_O_FLAGS, needed by the new localcharset.c

2010-02-26  Sam Steingold  <sds@gnu.org>

	Handle headers placed in build-aux by gnulib
	* m4/clisp.m4 (CL_CLISP): add AC_SUBST(CLISP_LIBDIR)
	* Makefile.devel ($(MAKEFILE_IN)): manually substitute
	CLISP_LIBDIR for $(top_srcdir)/src/build-aux et al
	* modules/regexp/Makefile.in, modules/syscalls/Makefile.in:
	* modules/wildcard/Makefile.in: use CLISP_LIBDIR when passing
	CFLAGS to make in gllib
	* makemake.in ($(SUBDIRS)): pass CLISP_LIBDIR to MAKE;
	depend on build-aux
	(BUILD_AUX): add build-aux headers, found in Makefile.am's

2010-02-25  Sam Steingold  <sds@gnu.org>

	Ensure that (CLOSE s :ABORT T) never signals.
	* stream.d (ChannelStream_fini): accept abort argument and do not